Adding router for stations api + util functions to read from csv

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "license": "MIT",
     "dependencies": {
         "cors": "^2.8.5",
+        "csv-parser": "^3.0.0",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
+        "geolib": "^3.3.4",
         "helmet": "^8.0.0",
         "morgan": "^1.10.0"
     },
