--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,13 @@
 {
-  "compilerOptions": {
-    "outDir": "dist",
-    "sourceMap": true,
-    "target": "esnext",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "baseUrl": ".",
-    "paths": {
-      "src/*": ["src/*.js"],
-      "scripts/*": ["scripts/*.js"],
-      "test/*": ["test/*.js"]
-    }
-  },
-  "include": ["./*.js", "src/**/*.ts", "test/**/*.ts"]
+    "compilerOptions": {
+        "sourceMap": true,
+        "target": "esnext",
+        "module": "commonjs",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "skipLibCheck": true,
+        "outDir": "./dist"
+    },
+    "include": ["./*.js", "src/**/*.ts", "test/**/*.ts"]
 }
