--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,21 @@
 {
     "env": {
         "node": true,
-        "es6": true
+        "es2021": true
     },
-    "extends": ["plugin:@typescript-eslint/recommended", "plugin:import/typescript", "prettier"],
-    "plugins": ["no-relative-import-paths", "import", "prettier", "@typescript-eslint"],
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:import/typescript",
+        "plugin:prettier/recommended",
+        "prettier"
+    ],
     "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": 12,
+        "sourceType": "module"
+    },
+    "plugins": ["no-relative-import-paths", "import", "prettier", "@typescript-eslint"],
     "rules": {
         "import/no-default-export": ["error"],
         "import/no-unresolved": "off",
@@ -21,6 +31,9 @@
         "import/resolver": {
             "typescript": {
                 "alwaysTryTypes": true
+            },
+            "node": {
+                "extensions": [".js", ".ts"]
             }
         }
     }
