--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "outDir": "dist",
         "sourceMap": true,
         "target": "esnext",
         "module": "commonjs",
@@ -7,7 +8,13 @@
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
-        "outDir": "./dist"
+        "paths": {
+            "src/*": ["./src/*"],
+            "test/*": ["./test/*"]
+        }
     },
-    "include": ["./*.js", "src/**/*.ts", "test/**/*.ts"]
+    "include": ["./src/**/*.ts"],
+    "ts-node": {
+        "require": ["tsconfig-paths/register"]
+    }
 }
