--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,11 @@
 {
     "env": {
         "node": true,
-        "es2021": true
+        "es6": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:import/typescript",
-        "plugin:prettier/recommended",
-        "prettier"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
+    "extends": ["plugin:@typescript-eslint/recommended", "plugin:import/typescript", "prettier"],
     "plugins": ["no-relative-import-paths", "import", "prettier", "@typescript-eslint"],
+    "parser": "@typescript-eslint/parser",
     "rules": {
         "import/no-default-export": ["error"],
         "import/no-unresolved": "off",
@@ -31,9 +21,6 @@
         "import/resolver": {
             "typescript": {
                 "alwaysTryTypes": true
-            },
-            "node": {
-                "extensions": [".js", ".ts"]
             }
         }
     }
