--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
     "compilerOptions": {
-        "outDir": "dist",
         "sourceMap": true,
         "target": "esnext",
         "module": "commonjs",
@@ -8,13 +7,7 @@
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
-        "paths": {
-            "src/*": ["./src/*"],
-            "test/*": ["./test/*"]
-        }
+        "outDir": "./dist"
     },
-    "include": ["./src/**/*.ts"],
-    "ts-node": {
-        "require": ["tsconfig-paths/register"]
-    }
+    "include": ["./*.js", "src/**/*.ts", "test/**/*.ts"]
 }
